<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="260dp"
    android:background="@color/slightgrey"
    android:layout_margin="10dp"
    app:cardCornerRadius="15dp"
    app:cardElevation="15dp">


    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/liquorName"
        app:layout_constraintBottom_toTopOf="@id/editTextMaxNumB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints=""
        android:importantForAutofill="no"
        android:layout_marginHorizontal="40dp" />

    <EditText
        android:id="@+id/editTextMaxNumB"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/maxStock"
        app:layout_constraintBottom_toTopOf="@id/editTextCurNumB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName"
        android:autofillHints=""
        android:importantForAutofill="no"
        android:layout_marginHorizontal="40dp"/>

    <EditText
        android:id="@+id/editTextCurNumB"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/addbtn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextMaxNumB"
        android:hint="@string/curStock"
        android:autofillHints=""
        android:importantForAutofill="no"
        android:layout_marginHorizontal="40dp"/>

    <Button
        android:id="@+id/addbtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextCurNumB" />
</androidx.constraintlayout.widget.ConstraintLayout>