<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="270dp"
    android:layout_height="270dp"
    android:background="@color/white"
    android:padding="15sp">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/liqNamePopup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/liquorName"
        app:layout_constraintBottom_toTopOf="@id/maxStock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.51" />

    <TextView
        android:id="@+id/maxStock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:text="@string/maxStock"
        app:layout_constraintBottom_toTopOf="@id/curStock"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/liqNamePopup" />

    <TextView
        android:id="@+id/curStock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="30dp"
        android:text="@string/curStock"
        app:layout_constraintBottom_toTopOf="@id/btnDone"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maxStock" />

    <EditText
        android:id="@+id/numMaxStock"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:autofillHints=""
        android:ems="6"
        android:hint="@string/maxStock"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/liqNamePopup" />

    <EditText
        android:id="@+id/numCurStock"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:ems="6"
        android:hint="@string/curStock"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/btnDone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/numMaxStock" />

    <Button
        android:id="@+id/btnDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/curStock" />

    <ImageButton
        android:id="@+id/dltbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rounddeletebtn"
        android:contentDescription="@string/dltliquor"
        android:src="@drawable/ic_delete"
        app:layout_constraintBottom_toTopOf="@id/numMaxStock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/liqNamePopup"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>